syntax = "proto3";
package telemetry;

message Process {
  string process_id = 1;
  string exe = 2;
  string username = 3;
  string realname = 4;
  string computer = 5;
  string distro = 6;
  string cpu_brand = 7;
  uint64 tsc_frequency = 8;
  string start_time = 9;  // RFC 3339
  int64 start_ticks = 10;
  string parent_process_id = 11;
}
